Fixed landing page ui on mobile devices

--- a/styles/AboutArtist.module.scss
+++ b/styles/AboutArtist.module.scss
@@ -7,21 +7,21 @@
         @apply bg-[#f8f5ff] border border-solid border-[#94a3b8] rounded-2xl w-[90%] max-w-3xl mx-auto p-8 my-8;
 
         .header {
-            @apply w-full relative h-60;
+            @apply w-full relative h-40 lg:h-60;
 
             .header-image-cont {
                 @apply relative h-full rounded-xl overflow-hidden;
             }
 
             .mini-cont {
-                @apply flex justify-between items-end w-full mx-auto px-10 absolute -bottom-6 z-20;
+                @apply flex flex-col lg:flex-row justify-between items-center lg:items-end w-full mx-auto px-10 absolute -bottom-20 lg:-bottom-6 z-20;
 
                 .avatar {
                     @apply relative w-24 h-24 rounded-full overflow-hidden;
                 }
 
                 .icons-cont {
-                    @apply z-10 flex border border-solid bg-white border-[#E2E8F0] py-2 px-1 rounded-xl;
+                    @apply z-10 flex border border-solid bg-white border-[#E2E8F0] py-2 px-1 rounded-xl mt-1 lg:mt-0;
 
                     svg {
                         @apply text-[#64748B] w-8 h-8 mx-2;
@@ -31,13 +31,13 @@
         }
 
         .more-info {
-            @apply mt-8 px-10;
+            @apply mt-24 lg:mt-8 lg:px-10;
 
             .top {
                 @apply flex justify-between items-center;
 
                 p {
-                    @apply text-5xl font-bold;
+                    @apply text-xl lg:text-5xl font-bold;
 
                     svg {
                         @apply inline;
@@ -45,12 +45,12 @@
                 }
 
                 button {
-                    @apply border border-solid border-[#9E94DA] bg-[#F8F5FF] px-4 py-2 text-lg rounded-xl;
+                    @apply border border-solid border-[#9E94DA] bg-[#F8F5FF] px-4 py-2 text-base lg:text-lg rounded-xl;
                 }
             }
 
             .artist-info {
-                @apply text-[#94A3B8] w-full max-w-lg;
+                @apply text-[#94A3B8] w-full max-w-lg text-xs;
             }
         }
     }
@@ -66,7 +66,7 @@
                 transform: translateX(-17%);
 
                 .image-cont {
-                    @apply mx-4 relative w-[45%] h-[20rem] rounded-xl overflow-hidden;
+                    @apply mx-4 relative w-[45%] h-40 lg:h-[20rem] rounded-xl overflow-hidden;
                 }
             }
         }
@@ -84,22 +84,22 @@
             }
 
             .more-org-info {
-                @apply flex justify-between items-center mt-4;
+                @apply flex flex-col lg:flex-row justify-between items-center mt-4;
 
                 .text-cont {
-                    @apply w-[55%];
+                    @apply w-full mb-2 lg:mb-0 lg:w-[55%] flex gap-6 lg:gap-0 lg:block justify-between items-center;
 
                     .name {
-                        @apply text-4xl font-bold mb-2;
+                        @apply text-xl lg:text-4xl font-bold mb-2;
                     }
 
                     .mini-text {
-                        @apply text-[.9rem];
+                        @apply text-xs lg:text-[.9rem];
                     }
                 }
 
                 .info-cont {
-                    @apply w-2/5;
+                    @apply w-full lg:w-2/5;
 
                     .the-info {
                         @apply bg-[#1E293B] rounded-xl flex justify-between items-center p-4 text-white;
